; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d_texture.c_vita2d_draw_texture_tint_part_scale.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d_texture.c_vita2d_draw_texture_tint_part_scale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vita2d_draw_texture_tint_part_scale(i32* %0, float %1, float %2, float %3, float %4, float %5, float %6, float %7, float %8, i32 %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca float, align 4
  %13 = alloca float, align 4
  %14 = alloca float, align 4
  %15 = alloca float, align 4
  %16 = alloca float, align 4
  %17 = alloca float, align 4
  %18 = alloca float, align 4
  %19 = alloca float, align 4
  %20 = alloca i32, align 4
  store i32* %0, i32** %11, align 8
  store float %1, float* %12, align 4
  store float %2, float* %13, align 4
  store float %3, float* %14, align 4
  store float %4, float* %15, align 4
  store float %5, float* %16, align 4
  store float %6, float* %17, align 4
  store float %7, float* %18, align 4
  store float %8, float* %19, align 4
  store i32 %9, i32* %20, align 4
  %21 = call i32 (...) @set_texture_tint_program()
  %22 = call i32 (...) @set_texture_wvp_uniform()
  %23 = load i32, i32* %20, align 4
  %24 = call i32 @set_texture_tint_color_uniform(i32 %23)
  %25 = load i32*, i32** %11, align 8
  %26 = load float, float* %12, align 4
  %27 = load float, float* %13, align 4
  %28 = load float, float* %14, align 4
  %29 = load float, float* %15, align 4
  %30 = load float, float* %16, align 4
  %31 = load float, float* %17, align 4
  %32 = load float, float* %18, align 4
  %33 = load float, float* %19, align 4
  %34 = call i32 @draw_texture_part_scale_generic(i32* %25, float %26, float %27, float %28, float %29, float %30, float %31, float %32, float %33)
  ret void
}

declare dso_local i32 @set_texture_tint_program(...) #1

declare dso_local i32 @set_texture_wvp_uniform(...) #1

declare dso_local i32 @set_texture_tint_color_uniform(i32) #1

declare dso_local i32 @draw_texture_part_scale_generic(i32*, float, float, float, float, float, float, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
